# iot-playground

./: .clauderc  .env  .env_docker  .gitignore  Dockerfile.api.yml  Dockerfile.devices.yml  Dockerfile.mqtt.yml  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/: apps.py  manage.py
backend/devices/: README.md  admin.py  apps.py  models.py  urls.py  views.py
backend/devices/migrations/: 0001_initial.py
backend/devices/static/devices/css/: detail.css  index.css
backend/devices/templates/devices/: detail.html  index.html
backend/django_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_api/mongo/: __init__.py  mongodb_client.py
backend/mqtt_storage/: admin.py  apps.py
backend/mqtt_storage/migrations/: 0001_initial.py
db_clients/: __init__.py  mongo_client.py
iot_devices/: run_all_devices.py  weather_endpoint.py
iot_devices/db_clients/: mongo_client.py
iot_devices/modbus/: modbus_client.py  modbus_server.py  run_server_client.py
iot_devices/mqtt/: README.md  broker.py  client.py  client_cli.py  client_subscribe.py  mosquitto.conf  run_broker_clients.py
iot_devices/mqtt/cert/: san.cnf  server.crt  server.key
modbus/: __init__.py  modbus_client.py  modbus_server.py  run_modbus_server_client.py  run_server_client.py
mqtt/: README.md  __init__.py  broker.py  client.py  client_cli.py  client_subscribe.py  mosquitto.conf  weather.py
mqtt/test/: example.py  example_db_test.py
