[project]
name = "iot-palyground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-extension>=0.1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "paho-mqtt>=2.0.0",
    "requests>=2.33.1",
    "pymongo>=4.16.0",
    "pymodbus[simulator]>=3.13.0",
    "aiohttp>=3.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
